fix: add overflow-y for layout shift

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,7 +120,7 @@
         user-select: none;
         overscroll-behavior: none;
         scroll-behavior: smooth;
-        scrollbar-gutter: stable;
+        overflow-y: scroll;
     }
   :root {
         --background: 0 0% 100%;
@@ -174,6 +174,9 @@
         --chart-3: 30 80% 55%;
         --chart-4: 280 65% 60%;
         --chart-5: 340 75% 55%;
+    }
+    body::-webkit-scrollbar {
+        width: 8px;
     }
 }
 
